--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="viewport" content="width=device-width,initial-scale-1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="styles/styles.css">
     <meta charset="utf-8">
     <title>Resume</title>
@@ -9,16 +9,17 @@
   <body>
     <div class="main">
       <div class="leftDiv">
-        <img src="images/priya.png" alt="exact image name">
+        <!-- <img src="images/priya.png" alt="exact image name">
         <h2>priya</h2>
         <h3>APSSDC</h3>
         <h5>1122334455</h5>
-        <h5>priyankakns24@gmail.com</h5>
+        <h5>priyankakns24@gmail.com</h5> -->
       </div>
         <div class="rightDiv">
-          <h1>career object</h1><hr>
-          <p>priya and vishu are friends</p>
-          <h1>EDUCATIONAL INFORMATION</h1>
+          <!-- <h1>career object</h1><hr>
+          <p>pto have my career in a progressive organisation that gives a scope to apply my knowledge and technical skills to work dynamically for the growth of organisation."
+        </p> -->
+          <!-- <h1>EDUCATIONAL INFORMATION</h1>
           <h3>B.tech</h3>
           <ul>
             <li>college:QISCET</li>
@@ -37,17 +38,18 @@
             <li>school:Qis high school</li>
             <li>medium:english</li>
             <li>cgps:93</li>
-          </ul>
-          <h1>skills</h1>
+          </ul> -->
+          <!-- <h1>skills</h1>
           <ul>
             <li>java</li>
             <li>c</li>
             <li>c++</li>
           </ul>
-          <hr>
+          <hr> -->
 
     </div>
     </div>
-
   </body>
+  <script type="text/javascript" src="resume.js">
+  </script>
 </html>
